# wallet-poc

./: .gitignore  cabal.project  stack.yaml  update-all.sh
wallet-poc/: CHANGELOG.md  wallet-poc.cabal
wallet-poc/src/Cardano/Wallet/: ChainSync.hs
